# libdecodeqr

./: Makefile.am  configure.ac
doc/: ApiReference.ja  HackingGuide.ja  README
examples/: Makefile.am
examples/simple/: Makefile.am  simple.dep  simple.dsp  simpletest.cpp
examples/webcam/: Makefile.am  webcam.cpp  webcam.dep
libdecodeqr/: Makefile.am  bitstream.h  codedata.cpp  codedata.h  container.cpp  ecidecoder.cpp  ecidecoder.h  imagereader.cpp  libdecodeqr.dep  qrerror.h  qrtypes.h  version.h
src/: Makefile.am  Makefile.in  configure  configure.ac  configure.in
src/libdecodeqr/: Makefile  Makefile.in  bitstream.cpp  bitstream.h  codedata.cpp  codedata.h  container.cpp  container.h  decodeqr.h  ecidecoder.cpp  ecidecoder.h  errorcode.h  formatinfo.cpp  formatinfo.h  galois.cpp  galois.h  imagereader.cpp  imagereader.h  libdecodeqr.cpp  libdecodeqr.dep  libdecodeqr.dsp  libdecodeqr.dsw  libdecodeqr.mak  libdecodeqr.ncb  libdecodeqr.opt  libdecodeqr.plg  qrerror.h  qrtypes.h  version.h
src/libdecodeqr/sample/simple/: simple.dsp  simple.dsw  simple.mak  simpletest.cpp  test.dep  test.dsw  test.mak
src/sample/: Makefile.in
src/sample/simple/: Makefile  Makefile.am  Makefile.in  simple.dsw  simple.mak  simpletest.cpp  test.dsp  test.ncb  test.opt  test.plg
src/sample/webcam/: Makefile  Makefile.am  Makefile.in  webcam.cpp  webcam.dsp  webcam.dsw  webcam.mak
src/test/: Makefile.am  Makefile.in  test_codedata.cpp  test_galois.cpp
