AM_CPPFLAGS = $(DEPS_CFLAGS)
EXTRA_DIST = bitstream.h codedata.h container.h ecidecoder.h formatinfo.h galois.h imagereader.h libdecodeqr.cpp libdecodeqr.dep libdecodeqr.dsp libdecodeqr.dsw libdecodeqr.mak version.h
lib_LTLIBRARIES = libdecodeqr.la
libdecodeqr_la_SOURCES = bitstream.cpp codedata.cpp container.cpp ecidecoder.cpp formatinfo.cpp galois.cpp imagereader.cpp libdecodeqr.cpp
libdecodeqr_la_LIBADD = $(DEPS_LIBS)
include_HEADERS = decodeqr.h qrerror.h qrtypes.h

